Updated swagger page
